<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">豆兜儿影视</string>
    <string name="net_connection_error">网络连接错误，请检查网络</string>
    <string name="error">错误</string>
    <string name="setnet">设置网络</string>
    <string name="exit">退出</string>
    <string name="confirm">确认</string>
    <string name="email">邮箱</string>
    <string name="back">返回</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="ipaddr">服务器IP地址:</string>
    <string name="tel_info">手机号归属地查询系统</string>
    <string name="weather_info">天气预报查询系统</string>
    <string name="translate_info">中英文双向翻译系统</string>
    <string name="search_result_null">查询结果为空</string>
    <string name="no_translate_find">没有找到合适的翻译结果</string>
    <string name="no_Mp3_to_play">没有可以播放的文件</string>
    <string name="login">登录</string>
    <string name="getting_user_info">正在获取相关用户信息,请稍候...</string>
    <string name="get_mp3_success">获取当前单词音频成功！</string>
    <string name="sentence">例句:</string>
    <string name="no_sentence">没有例句...</string>
    <string name="send">发送</string>
    <string name="word_detail">单词详情</string>
    <string name="fail">失败</string>
    <string name="sound">发音</string>
    <string name="refresh">刷新</string>
    <string name="cancel">取消</string>
    <string name="more">更多</string>
    <string name="translate_result">翻译结果：</string>
    <string name="discuss">评论</string>
    <string name="lifehelper">生活助手</string>
    <string name="province">省份：</string>
    <string name="city">城市：</string>
    <string name="tel_type">手机卡类型：</string>
    <string name="movie_name">电影名称：</string>
    <string name="type">类型：</string>
    <string name="director">导演：</string>
    <string name="actor">主演：</string>
    <string name="country">国家：</string>
    <string name="language">语言：</string>
    <string name="release_year">发型日期：</string>
    <string name="description">剧情简介：</string>
    <string name="score">评分：</string>
    <string name="no_freshnews_to_discuss">没有可以评论的心情</string>
    <string name="no_movie_to_collect">没有可以收藏的电影</string>
    <string name="no_friend_to_add">没有可以添加的好友</string>
    <string name="add_new_friend_success">添加好友成功</string>
    <string name="publish_freshnews">发表心情</string>
    <string name="publish_failed">发表失败</string>
    <string name="collect_movie_failed">收藏电影失败</string>
    <string name="collect_movie_success">收藏电影成功</string>
    <string name="publish_success">发表成功</string>
    <string name="get_movies_failed">获取电影列表失败</string>
    <string name="discuss_success">评论成功</string>
    <string name="discuss_failed">评论失败</string>
    <string name="please_check_ip">请检查IP是否格式正确</string>
    <string name="please_input_response_content">请输入评论的内容...</string>
    <string name="please_input_ip">请输入服务器IP地址...</string>
    <string name="please_input_city_name">请输入城市名</string>
    <string name="please_input_freshnews_content">请输入心情内容...</string>
    <string name="please_input_review_content">请输入影评内容...</string>
    <string name="please_input_word">请输入要翻译的单词</string>
    <string name="please_input_telnumber">请输入11位手机号</string>
    <string name="result">查询结果:</string>
    <string name="please_score_movie_first">请先对电影评分</string>
    <string name="choose_what_to_do">我要进行..</string>
    <string name="are_you_sure_to_exit">您确定要退出吗</string>
    <string name="login_failed">登陆失败，请检查账号密码</string>
    <string name="get_freshnews_failed">获取新鲜事失败</string>
    <string name="reg_failed">注册失败，请重试</string>
    <string name="email_is_empty">邮箱不能为空</string>
    <string name="password_is_empty">密码不能为空</string>
    <string name="nickname_is_empty">昵称不能为空</string>
    <string name="toregister">注册一个新的豆兜儿账号</string>
    <string name="tologin">已有豆兜儿账号，立即登陆</string>
	<string name="nickname">昵称</string>
	<string name="freshnews">新鲜事</string>
	<string name="movie_collection">电影收藏</string>
	<string name="guess_your_like">猜你喜欢</string>
	<string name="team_introduce">！Team是一支集结了5位专业技术人员的校园团队，团队成员拥有坚实的专业技能知识，良好的设计审美观，丰富的创作想象空间，致力于开发设计各种商业化网站及手机客户端。目前，团队已经完成网站项目3个，手机客户端1个，并在积极努力地投入到新的项目中。
！Team的“！”取感叹号的惊叹之意，同时取其垂直镜像英文字母“i”，映射单词“intelligent”和“imaginative”，希望我们的团队成为一支聪明的，又极富想象力的团队。
！Team目前共有成员5名，其中包括程序员3名，美工2名。</string>
</resources>