<?xml version="1.0" encoding="utf-8"?>
<FrameLayout 
	android:background="@color/dd_background"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout 
		android:orientation="vertical"
		android:paddingTop="45.0dip" 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<EditText 
			android:gravity="top|left|center" 
			android:id="@+id/edit_discuss_content"
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"
			android:hint="@string/please_input_response_content" 
			android:singleLine="false"
			android:layout_weight="1.0"
			android:inputType="textCapSentences|textAutoCorrect|textMultiLine" />
	</LinearLayout>
	<RelativeLayout 
		android:background="@drawable/top_bar_bg"
		android:paddingLeft="4.0dip" 
		android:paddingTop="6.0dip"
		android:paddingRight="4.0dip" 
		android:layout_width="fill_parent"
		android:layout_height="55.0dip">
		<Button 
			android:textSize="14.0sp" 
			android:textStyle="bold"
			android:textColor="@color/black" 
			android:id="@+id/buttun_discuss_back"
			android:background="@drawable/base_pose_title"
			android:layout_width="60dip" 
			android:layout_height="40dip"
			android:text="@string/back" 
			android:shadowColor="@color/white"
			android:shadowDy="1.0" 
			android:shadowRadius="1.0"
			android:layout_alignParentLeft="true" 
			/>
		<TextView 
			android:textSize="18.0sp" 
			android:textStyle="bold"
			android:textColor="@color/discuss_head_text_color" 
			android:id="@+id/text_discuss_title"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_marginTop="4.0dip" 
			android:text="@string/discuss"
			android:singleLine="true" 
			android:shadowColor="@color/white"
			android:shadowDy="1.0" 
			android:shadowRadius="1.0"
			android:layout_weight="1.0" 
			android:layout_centerHorizontal="true" />
		<Button 
			android:textSize="14.0sp"
			android:textStyle="bold" 
			android:textColor="@color/black"
			android:id="@+id/buttun_discuss_send" 
			android:background="@drawable/base_pose_title"
			android:layout_width="60dip" 
			android:layout_height="40dip"
			android:text="@string/send" 
			android:shadowColor="@color/white"
			android:shadowDy="1.0" 
			android:shadowRadius="1.0"
			android:layout_alignParentRight="true" 
			/>
	</RelativeLayout>
</FrameLayout>
