<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:background="@drawable/intro_bg"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent">
	<FrameLayout 
		android:paddingTop="30dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<ImageView 
			android:id="@+id/intro_imageView" 
			android:src="@drawable/logo"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_gravity="center" />
	</FrameLayout>
	<LinearLayout 
		android:orientation="vertical" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView
			android:layout_marginTop="40dip"
			android:textAppearance="@android:style/TextAppearance.Large" 
            android:textSize="25.0sp" 
            android:text="@string/ipaddr"
			android:layout_gravity="center" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"/>
		<EditText 
			android:layout_marginTop="20dip"
			android:textAppearance="@android:style/TextAppearance.Large" 
            android:textSize="25.0sp" 
			android:hint="@string/please_input_ip"
			android:layout_gravity="center" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:id="@+id/ip_edittext"/>
		<Button
			android:layout_marginTop="30dip"
			android:layout_gravity="center" 
			android:text="@string/confirm"
			android:textSize="20dip"
			android:textStyle="bold"
			android:layout_width="100dip" 
			android:layout_height="wrap_content"
			android:id="@+id/ip_confirm_button"/>
	</LinearLayout>
	<FrameLayout 
		android:layout_marginTop="50dip"
		android:layout_marginBottom="20dip"
		android:layout_gravity="center|bottom"
    	android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<ImageView 
			android:layout_gravity="center"
			android:layout_width="wrap_content" 
       		android:layout_height="wrap_content"
       		android:background="@drawable/logo_iteam"
       		android:scaleType="centerCrop" />
	</FrameLayout>	
</LinearLayout>
