<?xml version="1.0" encoding="utf-8"?>
<FrameLayout 
	android:background="@color/dd_background"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout 
		android:orientation="vertical"
		android:paddingTop="45.0dip" 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent" >
		<TextView 
        	android:visibility="gone"
        	android:paddingTop="5dip"
			android:paddingLeft="10dip"
			android:text="@string/no_translate_find"
           	android:id="@+id/translate_no_result_textview" 
           	android:layout_width="wrap_content" 
           	android:layout_height="wrap_content" 
           	style="@style/content" />
        <LinearLayout 
        	android:id="@+id/translate_result_linearlayout"
        	android:orientation="horizontal"
        	android:layout_width="fill_parent" 
           	android:layout_height="wrap_content" >
			<TextView 
	        	android:paddingTop="5dip"
	           	android:id="@+id/word_textview" 
	           	android:layout_width="wrap_content" 
	           	android:layout_height="wrap_content" 
	           	style="@style/content" />
	        <LinearLayout 
	        	android:id="@+id/translate_result_linearlayout"
	        	android:orientation="vertical"
	        	android:paddingLeft="10dip"
	        	android:layout_width="fill_parent" 
	           	android:layout_height="wrap_content" >
	           	<TextView 
		        	android:paddingTop="5dip"
		           	android:id="@+id/symbol_textview" 
		           	android:layout_width="wrap_content" 
		           	android:layout_height="wrap_content" 
		           	style="@style/content" />
	           	<TextView 
		        	android:paddingTop="5dip"
		           	android:id="@+id/translate_result_textview" 
		           	android:layout_width="wrap_content" 
		           	android:layout_height="wrap_content" 
		           	style="@style/content" />
		    </LinearLayout> 
		</LinearLayout> 
		<TextView 
	        	android:paddingTop="5dip"
				android:text="@string/sentence"
	           	android:layout_width="wrap_content" 
	           	android:layout_height="wrap_content" 
	           	style="@style/tel" />
		<TextView 
        	android:paddingTop="5dip"
           	android:id="@+id/sentense_textview" 
           	android:layout_width="wrap_content" 
           	android:layout_height="wrap_content" 
           	style="@style/content" />
	</LinearLayout>
	<RelativeLayout 
		android:background="@drawable/top_bar_bg"
		android:paddingLeft="4.0dip" 
		android:paddingTop="6.0dip"
		android:paddingRight="4.0dip" 
		android:layout_width="fill_parent"
		android:layout_height="55.0dip">
		<Button 
			android:textSize="14.0sp" 
			android:textStyle="bold"
			android:textColor="@color/black" 
			android:id="@+id/buttun_detail_back"
			android:background="@drawable/base_pose_title"
			android:layout_width="60dip" 
			android:layout_height="40dip"
			android:text="@string/back" 
			android:shadowColor="@color/white"
			android:shadowDy="1.0" 
			android:shadowRadius="1.0"
			android:layout_alignParentLeft="true" 
			/>
		<TextView 
			android:textSize="18.0sp" 
			android:textStyle="bold"
			android:textColor="@color/discuss_head_text_color" 
			android:id="@+id/text_detail_title"
			android:text="@string/word_detail"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_marginTop="4.0dip" 
			android:singleLine="true" 
			android:shadowColor="@color/white"
			android:shadowDy="1.0" 
			android:shadowRadius="1.0"
			android:layout_weight="1.0" 
			android:layout_centerHorizontal="true" />
		<Button 
			android:textSize="14.0sp"
			android:textStyle="bold" 
			android:textColor="@color/black"
			android:id="@+id/buttun_detail_sound" 
			android:background="@drawable/base_pose_title"
			android:layout_width="60dip" 
			android:layout_height="40dip"
			android:text="@string/sound" 
			android:shadowColor="@color/white"
			android:shadowDy="1.0" 
			android:shadowRadius="1.0"
			android:layout_alignParentRight="true" 
			/>
	</RelativeLayout>
	<FrameLayout 
		android:layout_marginBottom="20dip"
		android:layout_gravity="center|bottom"
    	android:layout_width="200dip"
		android:layout_height="60dip">
		<ImageView 
			android:layout_width="fill_parent" 
       		android:layout_height="fill_parent"
       		android:background="@drawable/logo"
       		android:scaleType="centerCrop" />
	</FrameLayout>	
</FrameLayout>

