<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:orientation="horizontal" 
	android:paddingLeft="8.0dip" 
	android:paddingTop="7.0dip" 
	android:paddingRight="7.0dip" 
	android:paddingBottom="7.0dip" 
	android:background="@color/list_background_color" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
  	xmlns:android="http://schemas.android.com/apk/res/android">
  	<FrameLayout 
    	android:layout_width="60.0dip" 
    	android:layout_height="90.0dip" 
    	android:foreground="@drawable/images_border_radius">
        <ImageView 
        	android:id="@+id/movieImage_list" 
        	android:layout_width="fill_parent" 
        	android:layout_height="fill_parent" 
        	android:background="@drawable/avatar_default"
        	android:scaleType="centerCrop"
        	/>
    </FrameLayout>
    <LinearLayout 
    	android:orientation="vertical" 
    	android:paddingLeft="11.0dip" 
    	android:paddingRight="5.0dip" 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:layout_weight="1.0"
    	android:layout_marginLeft="2.0dip">
    	<LinearLayout 
			android:orientation="horizontal"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
			<TextView 
				android:text="@string/movie_name"
	           	android:layout_width="70dip" 
	           	android:layout_height="wrap_content" 
	           	style="@style/nickName" />
	        <TextView 
				android:paddingLeft="10dip"
	           	android:id="@+id/movie_list_name_textView" 
	           	android:layout_width="wrap_content" 
	           	android:layout_height="wrap_content" 
	           	android:layout_weight="1.0" 
	           	style="@style/nickName" />
		  </LinearLayout>
		  <LinearLayout 
		  	android:paddingTop="5dip"
			android:orientation="horizontal"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
			<TextView 
				android:text="@string/type"
	           	android:layout_width="70dip" 
	           	android:layout_height="wrap_content" 
	           	style="@style/nickName" />
	        <TextView 
				android:paddingLeft="10dip"
	           	android:id="@+id/movie_list_type_textView" 
	           	android:layout_width="wrap_content" 
	           	android:layout_height="wrap_content" 
	           	android:layout_weight="1.0" 
	           	style="@style/nickName" />
		  </LinearLayout>
		  <LinearLayout 
		  	android:paddingTop="5dip"
			android:orientation="horizontal"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
			<TextView 
				android:text="@string/actor"
	           	android:layout_width="70dip" 
	           	android:layout_height="wrap_content" 
	           	style="@style/nickName" />
	        <TextView 
				android:paddingLeft="10dip"
	           	android:id="@+id/movie_list_actor_textView" 
	           	android:layout_width="wrap_content" 
	           	android:layout_height="wrap_content" 
	           	android:layout_weight="1.0" 
	           	style="@style/nickName" />
		  </LinearLayout>
		  <LinearLayout 
		  	android:paddingTop="5dip"
			android:orientation="horizontal"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
			<TextView 
				android:text="@string/release_year"
	           	android:layout_width="70dip" 
	           	android:layout_height="wrap_content" 
	           	style="@style/nickName" />
	        <TextView 
				android:paddingLeft="10dip"
	           	android:id="@+id/movie_list_release_year_textView" 
	           	android:layout_width="wrap_content" 
	           	android:layout_height="wrap_content" 
	           	android:layout_weight="1.0" 
	           	style="@style/nickName" />
		  </LinearLayout>
    </LinearLayout>
</LinearLayout>
