<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
	android:background="@color/dd_background" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:isScrollContainer="true"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<ScrollView 
		android:id="@+id/register_scroll"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent">
		<LinearLayout 
			android:gravity="center_horizontal"
			android:orientation="vertical" 
			android:paddingLeft="16.599976dip"
			android:paddingRight="16.599976dip" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<ImageView 
				android:background="@drawable/logo_text"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_marginTop="40.0dip" />
			<LinearLayout 
				android:gravity="center"
				android:orientation="vertical" 
				android:background="@drawable/bg_input_login_register"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_marginTop="28.0dip">
				<FrameLayout 
					android:gravity="center_horizontal"
					android:orientation="horizontal" 
					android:addStatesFromChildren="true"
					android:layout_width="fill_parent" 
					android:layout_height="45.0dip"
					android:foregroundGravity="right">
					<AutoCompleteTextView 
						android:textAppearance="@android:style/TextAppearance.Large"
						android:textSize="15.0sp" 
						android:layout_gravity="center_vertical"
						android:id="@+id/email_EditText" 
						android:background="@null"
						android:paddingLeft="15.0dip" 
						android:layout_width="fill_parent"
						android:layout_height="fill_parent" 
						android:hint="@string/email"
						android:popupBackground="@drawable/bg_input_login_register"
						android:layout_weight="1.0" 
						android:inputType="textEmailAddress"
						android:dropDownHeight="120.0dip" />
					<ImageView 
						android:layout_gravity="right|center"
						android:id="@+id/clear_UserName" 
						android:padding="15.0dip"
						android:visibility="invisible" 
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
						android:src="@drawable/btn_clear" />
				</FrameLayout>
				<ImageView 
					android:background="#ffd5d2ce"
					android:layout_width="fill_parent" 
					android:layout_height="1.0dip" />
				<EditText
					android:textAppearance="@android:style/TextAppearance.Large"
					android:textSize="15.0sp" 
					android:id="@+id/password_EditText"
					android:background="@null" 
					android:paddingLeft="15.0dip"
					android:layout_width="fill_parent" 
					android:layout_height="45.0dip"
					android:hint="@string/password" 
					android:inputType="textPassword"/>
				<ImageView 
					android:background="#ffd5d2ce"
					android:layout_width="fill_parent" 
					android:layout_height="1.0dip" />
				<EditText 
					android:textAppearance="@android:style/TextAppearance.Large"
					android:textSize="15.0sp" 
					android:id="@+id/nickname_EditText"
					android:background="@null" 
					android:paddingLeft="15.0dip"
					android:layout_width="fill_parent" 
					android:layout_height="45.0dip"
					android:hint="@string/nickname" 
					android:imeOptions="actionDone" />
			</LinearLayout>
			<Button 
				android:textAppearance="@android:style/TextAppearance.Large"
				android:gravity="center" 
				android:id="@+id/register_Button"
				android:background="@drawable/btn_register" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:layout_marginTop="30.0dip" />
			<TextView 
				android:textAppearance="@android:style/TextAppearance.Large"
				android:textSize="14.0sp" 
				android:textColor="#ff717171"
				android:gravity="right" 
				android:id="@+id/toLogin_TextView" 
				android:padding="6.5999756dip"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_marginTop="20.0dip" 
				android:text="@string/tologin" />
			<LinearLayout 
		 		android:gravity="center" 
		 		android:orientation="vertical" 
		 		android:background="@color/dd_background" 
		 		android:layout_width="fill_parent" 
		 		android:layout_height="35.0dip" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>