<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_gravity="center_vertical"
	android:layout_width="fill_parent"  
    android:layout_height="wrap_content" 
    android:scrollbars="vertical">
	<LinearLayout
	  android:background="@color/dd_background"
	  android:orientation="vertical"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content">
	  <LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<FrameLayout 
	    	android:layout_width="50dip"
			android:layout_height="50dip" 
	    	android:foreground="@drawable/images_border_radius">
			<ImageView 
				android:id="@+id/user_avatar_ImageView" 
				android:layout_width="fill_parent" 
        		android:layout_height="fill_parent"
        		android:background="@drawable/avatar_default"
        		android:scaleType="centerCrop" />
		</FrameLayout>	
		<ImageView 
			android:gravity="center"
			android:id="@+id/logo_ImageView" 
			android:paddingLeft="30dip"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent" 
			android:src="@drawable/logo_top" />
		<TextView
			android:id="@+id/nickName_TextView"
			android:textSize="30.0sp"
			android:paddingTop="4dip"
			android:textAppearance="@android:style/TextAppearance.Large" 
			android:gravity="right"
			android:layout_width="80dip"
			android:layout_height="fill_parent" />
	</LinearLayout>
	  <FrameLayout 
	  		android:layout_gravity="center"
	    	android:layout_width="100dip"
			android:layout_height="150dip" 
	    	android:foreground="@drawable/images_border_radius">
	  		<ImageView
	  			android:id="@+id/movie_imageView" 
	  			android:layout_width="fill_parent"
	  			android:layout_height="fill_parent"
	  			android:scaleType="centerCrop"/>
	  </FrameLayout>
	  <LinearLayout 
	  	android:paddingTop="5dip"
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:text="@string/movie_name"
           	android:layout_width="70dip" 
           	android:layout_height="wrap_content" 
           	style="@style/nickName" />
        <TextView 
			android:paddingLeft="10dip"
           	android:id="@+id/movie_name_textView" 
           	android:layout_width="wrap_content" 
           	android:layout_height="wrap_content" 
           	android:layout_weight="1.0" 
           	style="@style/content" />
	  </LinearLayout>
	  <LinearLayout 
	 	android:paddingTop="5dip"
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:text="@string/type"
           	android:layout_width="70dip" 
           	android:layout_height="wrap_content" 
           	style="@style/nickName" />
        <TextView 
			android:paddingLeft="10dip"
           	android:id="@+id/movie_type_textView" 
           	android:layout_width="wrap_content" 
           	android:layout_height="wrap_content" 
           	android:layout_weight="1.0" 
            style="@style/content" />
	  </LinearLayout>
	  <LinearLayout 
	  	android:paddingTop="5dip"
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:text="@string/director"
           	android:layout_width="70dip" 
           	android:layout_height="wrap_content" 
           	style="@style/nickName" />
        <TextView 
			android:paddingLeft="10dip"
           	android:id="@+id/movie_director_textView" 
           	android:layout_width="wrap_content" 
           	android:layout_height="wrap_content" 
           	android:layout_weight="1.0" 
           	style="@style/content"/>
	  </LinearLayout>
	  <LinearLayout 
	  	android:paddingTop="5dip"
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:text="@string/actor"
           	android:layout_width="70dip" 
           	android:layout_height="wrap_content" 
           	style="@style/nickName" />
        <TextView 
			android:paddingLeft="10dip"
           	android:id="@+id/movie_actor_textView" 
           	android:layout_width="wrap_content" 
           	android:layout_height="wrap_content" 
           	android:layout_weight="1.0" 
           	style="@style/content"/>
	  </LinearLayout>
	  <LinearLayout 
	  	android:paddingTop="5dip"
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:text="@string/country"
           	android:layout_width="70dip" 
           	android:layout_height="wrap_content" 
           	style="@style/nickName" />
        <TextView 
			android:paddingLeft="10dip"
           	android:id="@+id/movie_country_textView" 
           	android:layout_width="wrap_content" 
           	android:layout_height="wrap_content" 
           	android:layout_weight="1.0" 
           	style="@style/content" />
	  </LinearLayout>
	  <LinearLayout 
	  	android:paddingTop="5dip"
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:text="@string/language"
           	android:layout_width="70dip" 
           	android:layout_height="wrap_content" 
           	style="@style/nickName" />
        <TextView 
			android:paddingLeft="10dip"
           	android:id="@+id/movie_language_textView" 
           	android:layout_width="wrap_content" 
           	android:layout_height="wrap_content" 
           	android:layout_weight="1.0" 
           	style="@style/content"/>
	  </LinearLayout>
	  <LinearLayout 
	  	android:paddingTop="5dip"
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<TextView 
			android:text="@string/release_year"
           	android:layout_width="70dip" 
           	android:layout_height="wrap_content" 
           	style="@style/nickName" />
        <TextView 
			android:paddingLeft="10dip"
           	android:id="@+id/movie_release_year_textView" 
           	android:layout_width="wrap_content" 
           	android:layout_height="wrap_content" 
           	android:layout_weight="1.0" 
           	style="@style/content" />
	  </LinearLayout>
	  <LinearLayout 
	  	android:paddingTop="5dip"
		android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
        <TextView 
           	android:id="@+id/movie_description_textView" 
           	android:layout_width="wrap_content" 
           	android:layout_height="wrap_content" 
           	android:layout_weight="1.0" 
           	style="@style/content" />
	  </LinearLayout>
	  <LinearLayout 
	  	android:paddingTop="5dip"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<!-- TextView 
			android:text="@string/score"
           	android:layout_width="45dip" 
           	android:layout_height="wrap_content" 
           	style="@style/nickName" /> -->
        <RatingBar
			android:layout_gravity="center_horizontal"
           	android:id="@+id/score_ratingBar" 
           	android:layout_width="wrap_content" 
           	android:layout_height="wrap_content" 
           	android:numStars="5"
           	android:stepSize="0.5"/>
	  </LinearLayout>
	  <LinearLayout 
	  	android:orientation="horizontal"
	  	android:layout_marginTop="5dip"
	  	android:paddingBottom="20dip"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<Button 
	        android:textAppearance="@android:style/TextAppearance.Large" 
	        android:id="@+id/writeFilmReview_Button" 
	        android:background="@drawable/btn_review" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="50dip"/>
	    <Button 
	        android:textAppearance="@android:style/TextAppearance.Large" 
	        android:id="@+id/collect_Button" 
	        android:background="@drawable/btn_collect" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
			android:layout_marginRight="50dip" 
			android:layout_marginLeft="50dip"/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>

