<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"  
    android:orientation="vertical" 
    android:background="@color/list_background_color"
    android:layout_width="fill_parent"  
    android:layout_height="fill_parent">  
	<FrameLayout 
		android:id="@+id/top_tab" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<LinearLayout 
			android:orientation="vertical"
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent">
			<LinearLayout 
				android:orientation="horizontal"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
				<FrameLayout 
			    	android:layout_width="50dip"
					android:layout_height="50dip" 
			    	android:foreground="@drawable/images_border_radius">
					<ImageView 
						android:id="@+id/user_avatar_ImageView" 
						android:layout_width="fill_parent" 
		        		android:layout_height="fill_parent"
		        		android:background="@drawable/avatar_default"
		        		android:scaleType="centerCrop" />
				</FrameLayout>	
				<ImageView 
					android:gravity="center"
					android:id="@+id/logo_ImageView" 
					android:paddingLeft="30dip"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent" 
					android:src="@drawable/logo_top" />
				<TextView
					android:id="@+id/nickName_TextView"
					android:textSize="30.0sp"
					android:paddingTop="4dip"
					android:textAppearance="@android:style/TextAppearance.Large" 
					android:gravity="right"
					android:layout_width="80dip"
					android:layout_height="fill_parent" />
			</LinearLayout>
			<RadioGroup 
				android:orientation="horizontal" 
				android:id="@+id/main_radio"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
				<RadioButton 
					android:id="@+id/freshnews"
					android:background="@drawable/bg_tab_top" 
					android:checked="true"
					android:text="@string/freshnews" 
					style="@style/main_tab_top" />
				<RadioButton 
					android:id="@+id/movieCollection" 
					android:background="@drawable/bg_tab_top"
					android:text="@string/movie_collection" 
					style="@style/main_tab_top" />
				<RadioButton 
					android:id="@+id/guessYourLike"
					android:background="@drawable/bg_tab_top" 
					android:text="@string/guess_your_like"
					style="@style/main_tab_top" />
			</RadioGroup>
		</LinearLayout>
	</FrameLayout>
	<LinearLayout 
			android:measureAllChildren="true"
			android:id="@+id/container_freshnews"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
	</LinearLayout>	
	<LinearLayout 
			android:measureAllChildren="true"
			android:visibility="gone"
			android:id="@+id/container_moviecollection"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
	</LinearLayout>	
	<LinearLayout 
			android:measureAllChildren="true"
			android:visibility="gone"
			android:id="@+id/container_guessyourlike"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">
	</LinearLayout>	
</LinearLayout>  